refactor: Move design components into design-system folder, change Input to input signals in button

--- a/frontend/src/app/design-system/components/button/button.component.html
+++ b/frontend/src/app/design-system/components/button/button.component.html
@@ -1,7 +1,7 @@
 <button
-  [type]="type"
-  [disabled]="disabled || loading"
-  [class]="classes"
+  [type]="type()"
+  [disabled]="disabled() || loading()"
+  [class]="classes()"
   (click)="clicked.emit()"
 >
   @if (loading) {
