fix: Remove required from disabled,loading input signal

--- a/frontend/src/app/design-system/components/button/button.component.html
+++ b/frontend/src/app/design-system/components/button/button.component.html
@@ -4,7 +4,7 @@
   [class]="classes()"
   (click)="clicked.emit()"
 >
-  @if (loading) {
+  @if (loading()) {
     <ng-container>
       <svg class="animate-spin -ml-1 mr-3 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none"
            viewBox="0 0 24 24">
@@ -14,10 +14,10 @@
       </svg>
       Loading...
     </ng-container>
-  } @else if (!loading) {
+  } @else if (!loading()) {
     <ng-container>
-      @if (icon) {
-        <i [class]="icon + ' mr-2'"></i>
+      @if (icon()) {
+        <i [class]="icon() + ' mr-2'"></i>
       }
       <ng-content></ng-content>
     </ng-container>
