feat: Add main-layout and side-bar

--- a/frontend/src/app/core/layout/main-layout/main-layout.component.html
+++ b/frontend/src/app/core/layout/main-layout/main-layout.component.html
@@ -1,2 +1,6 @@
-<p>main-layout works!</p>
-<router-outlet />
+<div class="flex h-screen">
+  <app-sidebar [navigationItems]="navigationConfig" />
+  <main class="flex-1 overflow-auto">
+    <router-outlet />
+  </main>
+</div>
