--- a/frontend/src/app/features/dashboard/dashboard.component.html
+++ b/frontend/src/app/features/dashboard/dashboard.component.html
@@ -7,7 +7,10 @@
           <p class="text-gray-500 text-sm">Total Tasks</p>
           <p class="text-2xl font-semibold">28</p>
         </div>
-        < class="text-blue-500 h-8 w-8" />
+        <lucide-angular
+          [img]="CheckSquare"
+          class="text-blue-500 h-8 w-8"
+        ></lucide-angular>
       </div>
     </div>
 
