refactor: Reorganise calendar folder, create Calendar Service to handle navigation

--- a/frontend/src/app/features/calendar/components/month-calendar/month-calendar.component.html
+++ b/frontend/src/app/features/calendar/components/month-calendar/month-calendar.component.html
@@ -36,7 +36,7 @@
             <!-- Events will be rendered here -->
           </div>
 
-          <!-- Add Event Button (Only visible on hover for current month) -->
+          <!-- Add Event Button (Only visible on hover for current month-calendar) -->
           @if (cell.currentMonth) {
             <button
               class="btn btn-ghost btn-xs absolute top-1 right-1 opacity-0 group-hover:opacity-100 transition-opacity"
